# yakrazor

./: README.md  pyproject.toml
src/yakrazor/: __init__.py  api.py  app.py  database.py
src/yakrazor/models/: __init__.py  task.py
tests/: test_api.py
