[tool.poetry]
name = "yakrazor"
version = "0.1.0"
description = "Yak Razor: Scheduler for Yak Shavers"
authors = ["Harshad Sharma <harshad@sharma.io>"]
readme = "README.md"
packages = [{include = "yakrazor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
